# omnilingual-ASR-Web-Dashboard

./: .gitignore  .pre-commit-config.yaml  .webui_secret_key  .~lock.README.md#  =20.0.0  ASR_dataset_outline.md  ASR_finetuning_instructions.html  ASR_finetuning_instructions.md  CHANGELOG.md  CONTRIBUTING.md  DASHBOARD_README.md  LICENSE  README.md  app.py  bangla.m4a  banglish.m4a  call_2025-12-06_11-52-48_OUT_01843518181.amr  call_2025-12-10_12-25-01_IN_+8801916110004.amr  call_2025-12-10_15-20-27_OUT_+8801521334416.amr  call_2025-12-11_12-42-06_OUT_.amr  capture_mic.txt  child.m4a  citybank.md  conversation.m4a  cursor_download_run_train.md  cursor_i_have_downloaded_the_meta_omnil.md  cursor_omni_asr_flask_dashboard.md  debug_audio.py  inference_asr_lora.py  mypy.ini  outputs.txt  pyproject.toml  requirements-dashboard.txt  requirements.txt  requirements_training.txt  run_training.sh  setup_env.sh  system_prompt.txt  test_long_audio.py  train_asr_lora.py
bangla_actual_dataset/: generated_dataset.csv
ci/problem-matchers/: README.md  black.json  flake8.json  gcc.json  isort.json  mypy.json
dataset/: metadata.jsonl
dataset/bangla_sample/: metadata.csv  train.tsv  train.wrd
mms-1b-bangla-lora/checkpoint-700/: rng_state.pth  trainer_state.json
mms-1b-bangla-lora/checkpoint-720/: adapter_config.json  rng_state.pth  trainer_state.json
mms-1b-bangla-lora/final_model/: README.md  tokenizer_config.json  vocab.json
mms-1b-bangla-lora/runs/Dec21_21-27-02_sigmind-survey/: events.out.tfevents.1766330827.sigmind-survey.270144.0
scripts/: prepare_bangla_datasets.py  prepare_dataset copy.py  run_local_inference.py
src/omnilingual_asr/: __init__.py
src/omnilingual_asr/cards/: README.md
src/omnilingual_asr/cards/datasets/: example_dataset.yaml
src/omnilingual_asr/cards/models/: rc_models.yaml
src/omnilingual_asr/datasets/: __init__.py
src/omnilingual_asr/datasets/impl/: manifest_asr_dataset.py  mixture_parquet_asr_dataset.py
src/omnilingual_asr/datasets/interfaces/: storage_interface.py  task_interface.py
src/omnilingual_asr/datasets/storage/: manifest_storage.py  mixture_parquet_storage.py
src/omnilingual_asr/datasets/tasks/: asr_task.py  ssl_task.py
src/omnilingual_asr/models/: README.md  __init__.py
static/css/: style.css
static/js/: app.js
templates/: index.html
tests/: conftest.py
tests/unit/: test_audio_cropper.py  test_audio_utils.py  test_lang_ids.py
train_loca/: train_asr_lora.py
workflows/dataprep/: README.md  audio_tools.py  dataloader_example.py  hf_dataset_ingestion_example.py  norm_config_module.py  text_tools.py
(+34 files in other folders)
